--- a/mainapp/static/mainapp/css/style.css
+++ b/mainapp/static/mainapp/css/style.css
@@ -723,7 +723,7 @@ z-index: 11;
 	#page title
 ******************************/
 .page-title {
-  background: url("../images/page-title.jpg") center center/cover no-repeat local;
+  background: url("../images/zeybek-hukuk-bread-resim.png") center center/cover no-repeat local;
   width: 100%;
   height: 500px;
   text-align: center;
@@ -7887,6 +7887,14 @@ background-color: #f8f8f8;
 .footer-link-lis {
   padding-bottom: 10px;
   padding-left: 5px;
+}
+
+li.uzmanlik-list {
+  color : #787878;
+  list-style: lower-alpha;
+  padding-left : 15px;
+  margin-left : 25px;
+  padding-bottom: 5px;
 }
 
 /*# sourceMappingURL=style.css.map */
