revizyon talepleri gerçekleştirildi

--- a/mainapp/templates/mainapp/about.html
+++ b/mainapp/templates/mainapp/about.html
@@ -80,19 +80,18 @@
                             <h1 class="color-g">Avukatlarımız</h1>
                             <h2>Avukat Kerem Zeybek Kimdir?</h2>
                             <p>Avukat Kerem Zeybek, Yeditepe Üniversitesi’nde %100 YÖK Bursu ile eğitimini tamamlamıştır. Hukuk eğitim öğreniminin bir dönemini Salzburg Üniversitesi’nde gerçekleştirmiş ve Yeditepe Üniversitesi’nden mezun olmuştur. İngilizce dil bilgisi çok iyi düzeydedir.</p>
-                            <h2>Avukat Libaden Çeğen Kimdir?</h2>
-                            <p>Avukat Libaden Çeğen, Doğu Akdeniz Üniversitesi hukuk fakültesinde eğitimini tamamlayarak mezun olmuştur. 9 yıldır Kocaeli barosu bünyesinde avukatlık mesleğini sürdürmektedir.</p>
+                            <h2>Avukat Libaden Çegen Kimdir?</h2>
+                            <p>Avukat Libaden Çegen, Doğu Akdeniz Üniversitesi hukuk fakültesinde eğitimini tamamlayarak mezun olmuştur. 9 yıldır Kocaeli barosu bünyesinde avukatlık mesleğini sürdürmektedir.</p>
                         </div>
                     </div>
                 </div> <!-- end row -->
             </div> <!-- end container -->
         </section>
         <!-- end of about-section -->
-
         <!-- start about-pg-section -->
         <section class="about-pg-section ">
             <div class="container">
-                <div class="row"><hr class="divider_40">
+                <div class="row">
                     <div class="col col-sm-5 col-xs-12">
                         <div class="experience-text">
                             <h2><span>40</span> Yıllık Deneyim</h2>
@@ -103,24 +102,6 @@
                             <div class="">
                                 <div class="funfact-grids">
 
-                                    <div class="grid">
-                                        <div>
-                                            <h3><span class="odometer" data-count="750">00</span></h3>
-                                        </div>
-                                        <p>Müvekkil</p>
-                                    </div>
-                                    <div class="grid">
-                                        <div>
-                                            <h3><span class="odometer" data-count="6">00</span>+</h3>
-                                        </div>
-                                        <p>Uzman Avukat</p>
-                                    </div>
-                                    <div class="grid">
-                                        <div>
-                                            <h3><span class="odometer" data-count="7521">00</span></h3>
-                                        </div>
-                                        <p>Çözülmüş Vaka</p>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -129,7 +110,7 @@
             </div> <!-- end container -->
         </section>
         <!-- end about-pg-section -->
-
+<br>
         <!-- stat divider-section -->
        <section class="divider-section">
             <div class="container">
