--- a/mainapp/templates/mainapp/components/layout.html
+++ b/mainapp/templates/mainapp/components/layout.html
@@ -15,7 +15,7 @@
   gtag('config', 'UA-144384156-1');
   </script>
 
-  
+
     <!-- Meta Tags -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -75,7 +75,7 @@
                         <div class="col col-md-7 col-sm-5">
                             <div class="contact-info">
                                 <ul>
-                                    <li><i class="ti-mobile"></i> Şehit Musa Sokak 35, 41040 Kocaeli, İzmit Türkiye</li>
+                                    <li><i class="ti-mobile"></i> Şehit Musa Sokak 35, Koçal Apt. Kocaeli, İzmit Türkiye</li>
                                     <li><i class="ti-email"></i>info@zeybekhukuk.com</li>
                                 </ul>
                             </div>
@@ -195,8 +195,8 @@
                                             <h3>Bize Ulaşın</h3>
                                         </div>
                                         <ul>
-                                            <li><span>Adres : </span> Şehit Musa Sokak 35, 41040 Kocaeli, İzmit Türkiye</li>
-                                            <li><span>Telefon : </span> info@zeybekhukuk.com</li>
+                                            <li><span>Adres : </span> Karabaş mahallesi Şehit Musa sok. No:35 Koçal apt. D:8 İzmit/Kocaeli</li>
+                                            <li><span>Telefon : </span> 0 (262) 322 21 66</li>
                                             <li><span>Email : </span> info@zeybekhukuk.com</li>
                                         </ul>
                                     </div>
