--- a/mainapp/templates/mainapp/iletisim.html
+++ b/mainapp/templates/mainapp/iletisim.html
@@ -75,7 +75,7 @@
                                 <i class="ti-location-pin"></i>
                             </div>
                             <h3>Adres</h3>
-                            <p>Karabaş, Şht. Musa Sk. No:35 İzmit/Kocaeli</p>
+                            <p style="font-size: 14px;">Karabaş mahallesi Şehit Musa sok. No:35 Koçal apt. D:8 İzmit/Kocaeli</p>
                         </div>
                         <div class="grid">
                             <div class="icon">
