--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -69,7 +69,7 @@
             <div class="col col-sm-6 clearfix">
                 <div class="skill-port-right">
                    <p>
-Zeybek Hukuk Bürosu, 1979 yılında merhum Av. Ali Zeybek’in kuruculuğunda Av. Emine Zeybek ile birlikte başta Kocaeli ve İstanbul bölgeleri olmak üzere Türkiye genelinde 40 yılı aşkın bir süredir çalışmalarını sürdürmektedir.
+Zeybek Hukuk Bürosu, 1979 yılında merhum Av. Ali Zeybek’in kuruculuğunda Av. Emine Zeybek ile birlikte başta Kocaeli ve İstanbul bölgeleri olmak üzere Türkiye genelinde 40 yılı aşkın bir süredir çalışmalarını sürdürmektedir. Güncel olarak Avukat Kerem Zeybek tarafından büronun yönetimi sağlanmaktadır.
                    </p>
                 </div>
             </div>
@@ -168,7 +168,7 @@ Zeybek Hukuk Bürosu, 1979 yılında merhum Av. Ali Zeybek’in kuruculuğunda A
                             <img src="{% static 'mainapp/images/zeybek-hukuk-avukat-resim.png' %}" alt="Zeybek Hukuk Poster">
                         </div>
                         <div class="details">
-                            <h3>Av. Libaden Çeğen</h3>
+                            <h3>Av. Libaden Çegen</h3>
                         </div>
                     </div>
 
