--- a/mainapp/templates/mainapp/components/layout.html
+++ b/mainapp/templates/mainapp/components/layout.html
@@ -75,7 +75,7 @@
                         <div class="col col-md-7 col-sm-5">
                             <div class="contact-info">
                                 <ul>
-                                    <li><i class="ti-mobile"></i> Şehit Musa Sokak 35, Koçal Apt. Kocaeli, İzmit Türkiye</li>
+                                    <li><i class="ti-mobile"></i> Körfez mah. Berk sk. Dolphin İş Merkezi K:6 No:602 İzmit/Kocaeli</li>
                                     <li><i class="ti-email"></i>info@zeybekhukuk.com</li>
                                 </ul>
                             </div>
@@ -211,7 +211,7 @@
                             <div class="row">
                                 <div class="separator"></div>
                                 <div class="col col-xs-12">
-                                  <p class="copyright-one">2019 Zeybek Hukuk Bürosu - 2019 </p>
+                                  <p class="copyright-one">2021 Zeybek Hukuk Bürosu - 2021 </p>
 
                                 </div>
                             </div>
