--- a/mainapp/templates/mainapp/components/layout.html
+++ b/mainapp/templates/mainapp/components/layout.html
@@ -195,7 +195,7 @@
                                             <h3>Bize Ulaşın</h3>
                                         </div>
                                         <ul>
-                                            <li><span>Adres : </span> Karabaş mahallesi Şehit Musa sok. No:35 Koçal apt. D:8 İzmit/Kocaeli</li>
+                                            <li><span>Adres : </span> Körfez mah. Berk sk. Dolphin İş Merkezi K:6 No:602 İzmit/Kocaeli</li>
                                             <li><span>Telefon : </span> 0 (262) 322 21 66</li>
                                             <li><span>Email : </span> info@zeybekhukuk.com</li>
                                         </ul>
